parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COUNT
    PERIOD

Grammar

Rule 0     S' -> programa
Rule 1     programa -> bloque
Rule 2     programa -> bloque programa
Rule 3     programa -> comment bloque programa
Rule 4     comment -> COMMENT1
Rule 5     comment -> COMMENT1 NEWLINE
Rule 6     bloque -> sentencia NEWLINE
Rule 7     bloque -> sentencia
Rule 8     bloque -> NEWLINE
Rule 9     sentencia -> print
Rule 10    sentencia -> asignacion
Rule 11    sentencia -> variable
Rule 12    sentencia -> funcion
Rule 13    sentencia -> if
Rule 14    sentencia -> for
Rule 15    sentencia -> invocar
Rule 16    asignacion -> VARIABLE ASSIGN expresion SEMICOLON
Rule 17    variable -> VARIABLE ASSIGN_ADD d_numericos SEMICOLON
Rule 18    variable -> VARIABLE ASSIGN_SUB d_numericos SEMICOLON
Rule 19    variable -> VARIABLE ASSIGN_ADD error SEMICOLON
Rule 20    variable -> VARIABLE ASSIGN_SUB error SEMICOLON
Rule 21    print -> ECHO datos SEMICOLON
Rule 22    print -> ECHO SEMICOLON
Rule 23    print -> ECHO argumentos SEMICOLON
Rule 24    if -> IF LPAREN operacionRelacional RPAREN LKEY NEWLINE programa RKEY
Rule 25    if -> IF LPAREN operacionRelacional RPAREN LKEY NEWLINE programa RKEY ELSE LKEY NEWLINE programa RKEY NEWLINE
Rule 26    for -> FOR LPAREN VARIABLE ASSIGN datos SEMICOLON VARIABLE operadorRelacionalNumerico datos SEMICOLON operacionModificadoras RPAREN LKEY NEWLINE programa RKEY NEWLINE
Rule 27    expresion -> argumentos
Rule 28    expresion -> invocar
Rule 29    expresion -> operacionAritmetica
Rule 30    expresion -> operacionRelacional
Rule 31    expresion -> readline
Rule 32    expresion -> arregloIndexado
Rule 33    expresion -> arregloDeclarado
Rule 34    expresion -> operacionLogica
Rule 35    expresion -> operadorLogico
Rule 36    argumentos -> datos COMMA argumentos
Rule 37    argumentos -> datos
Rule 38    datos -> VARIABLE
Rule 39    datos -> d_strings
Rule 40    datos -> d_numericos
Rule 41    datos -> d_booleanos
Rule 42    d_numericos -> NUMBER
Rule 43    d_numericos -> FLOAT
Rule 44    d_strings -> STRING
Rule 45    d_booleanos -> BOOLEAN
Rule 46    operacionAritmetica -> d_numericos operadorAritmetico d_numericos
Rule 47    operacionAritmetica -> d_numericos operadorAritmetico operacionAritmetica
Rule 48    operacionAritmetica -> d_numericos operadorAritmetico error
Rule 49    operacionModificadoras -> VARIABLE INCREMENT
Rule 50    operacionModificadoras -> VARIABLE DECREMENT
Rule 51    operacionLogica -> operacionRelacional operadorLogico operacionRelacional
Rule 52    operacionLogica -> operacionRelacional operadorLogico operacionLogica
Rule 53    operacionLogica -> <empty>
Rule 54    operacionRelacional -> operacionRelacionalGeneral
Rule 55    operacionRelacional -> operacionRelacionalNumerica
Rule 56    operacionRelacionalGeneral -> datos operadorRelacionalGeneral datos
Rule 57    operacionRelacionalNumerica -> datos operadorRelacionalNumerico d_numericos
Rule 58    operacionRelacionalNumerica -> datos operadorRelacionalNumerico error
Rule 59    operadorAritmetico -> PLUS
Rule 60    operadorAritmetico -> MINUS
Rule 61    operadorAritmetico -> TIMES
Rule 62    operadorAritmetico -> DIVIDE
Rule 63    operadorAritmetico -> MOD
Rule 64    operadorLogico -> LOGICAL_AND
Rule 65    operadorLogico -> LOGICAL_OR
Rule 66    operadorLogico -> LOGICAL_NOT
Rule 67    operadorRelacionalGeneral -> EQUALS
Rule 68    operadorRelacionalGeneral -> DIFFERENT
Rule 69    operadorRelacionalNumerico -> GREATER
Rule 70    operadorRelacionalNumerico -> LESS
Rule 71    operadorRelacionalNumerico -> GREATER_EQUALS
Rule 72    operadorRelacionalNumerico -> LESS_EQUALS
Rule 73    arregloDeclarado -> LCOR NEWLINE cuerpoArregloDeclarado NEWLINE RCOR
Rule 74    cuerpoArregloDeclarado -> datos ASSIGNATION datos
Rule 75    cuerpoArregloDeclarado -> datos ASSIGNATION datos COMMA NEWLINE cuerpoArregloDeclarado
Rule 76    arregloIndexado -> LCOR datos_comma RCOR
Rule 77    funcion -> FUNCTION FUNCTION_NAME LPAREN argumentosFuncion RPAREN LKEY NEWLINE cuerpoFuncion RKEY
Rule 78    funcion -> FUNCTION FUNCTION_NAME LPAREN RPAREN LKEY NEWLINE cuerpoFuncion RKEY
Rule 79    invocar -> FUNCTION_NAME LPAREN datos_comma RPAREN SEMICOLON
Rule 80    invocar -> FUNCTION_NAME LPAREN RPAREN SEMICOLON
Rule 81    argumentosFuncion -> argumentoFuncion
Rule 82    argumentosFuncion -> argumentoFuncion argumentosFuncion
Rule 83    argumentoFuncion -> d_numericos
Rule 84    argumentoFuncion -> d_strings
Rule 85    argumentoFuncion -> d_booleanos
Rule 86    argumentoFuncion -> VARIABLE
Rule 87    datos_comma -> datos
Rule 88    datos_comma -> datos COMMA datos_comma
Rule 89    cuerpoFuncion -> programa RETURN expresion SEMICOLON NEWLINE
Rule 90    cuerpoFuncion -> programa
Rule 91    cuerpoFuncion -> RETURN expresion SEMICOLON NEWLINE
Rule 92    readline -> READLINE LPAREN RPAREN

Terminals, with rules where they appear

ASSIGN               : 16 26
ASSIGNATION          : 74 75
ASSIGN_ADD           : 17 19
ASSIGN_SUB           : 18 20
BOOLEAN              : 45
COMMA                : 36 75 88
COMMENT1             : 4 5
COUNT                : 
DECREMENT            : 50
DIFFERENT            : 68
DIVIDE               : 62
ECHO                 : 21 22 23
ELSE                 : 25
EQUALS               : 67
FLOAT                : 43
FOR                  : 26
FUNCTION             : 77 78
FUNCTION_NAME        : 77 78 79 80
GREATER              : 69
GREATER_EQUALS       : 71
IF                   : 24 25
INCREMENT            : 49
LCOR                 : 73 76
LESS                 : 70
LESS_EQUALS          : 72
LKEY                 : 24 25 25 26 77 78
LOGICAL_AND          : 64
LOGICAL_NOT          : 66
LOGICAL_OR           : 65
LPAREN               : 24 25 26 77 78 79 80 92
MINUS                : 60
MOD                  : 63
NEWLINE              : 5 6 8 24 25 25 25 26 26 73 73 75 77 78 89 91
NUMBER               : 42
PERIOD               : 
PLUS                 : 59
RCOR                 : 73 76
READLINE             : 92
RETURN               : 89 91
RKEY                 : 24 25 25 26 77 78
RPAREN               : 24 25 26 77 78 79 80 92
SEMICOLON            : 16 17 18 19 20 21 22 23 26 26 79 80 89 91
STRING               : 44
TIMES                : 61
VARIABLE             : 16 17 18 19 20 26 26 38 49 50 86
error                : 19 20 48 58

Nonterminals, with rules where they appear

argumentoFuncion     : 81 82
argumentos           : 23 27 36
argumentosFuncion    : 77 82
arregloDeclarado     : 33
arregloIndexado      : 32
asignacion           : 10
bloque               : 1 2 3
comment              : 3
cuerpoArregloDeclarado : 73 75
cuerpoFuncion        : 77 78
d_booleanos          : 41 85
d_numericos          : 17 18 40 46 46 47 48 57 83
d_strings            : 39 84
datos                : 21 26 26 36 37 56 56 57 58 74 74 75 75 87 88
datos_comma          : 76 79 88
expresion            : 16 89 91
for                  : 14
funcion              : 12
if                   : 13
invocar              : 15 28
operacionAritmetica  : 29 47
operacionLogica      : 34 52
operacionModificadoras : 26
operacionRelacional  : 24 25 30 51 51 52
operacionRelacionalGeneral : 54
operacionRelacionalNumerica : 55
operadorAritmetico   : 46 47 48
operadorLogico       : 35 51 52
operadorRelacionalGeneral : 56
operadorRelacionalNumerico : 26 57 58
print                : 9
programa             : 2 3 24 25 25 26 89 90 0
readline             : 31
sentencia            : 6 7
variable             : 11

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . bloque
    (2) programa -> . bloque programa
    (3) programa -> . comment bloque programa
    (6) bloque -> . sentencia NEWLINE
    (7) bloque -> . sentencia
    (8) bloque -> . NEWLINE
    (4) comment -> . COMMENT1
    (5) comment -> . COMMENT1 NEWLINE
    (9) sentencia -> . print
    (10) sentencia -> . asignacion
    (11) sentencia -> . variable
    (12) sentencia -> . funcion
    (13) sentencia -> . if
    (14) sentencia -> . for
    (15) sentencia -> . invocar
    (21) print -> . ECHO datos SEMICOLON
    (22) print -> . ECHO SEMICOLON
    (23) print -> . ECHO argumentos SEMICOLON
    (16) asignacion -> . VARIABLE ASSIGN expresion SEMICOLON
    (17) variable -> . VARIABLE ASSIGN_ADD d_numericos SEMICOLON
    (18) variable -> . VARIABLE ASSIGN_SUB d_numericos SEMICOLON
    (19) variable -> . VARIABLE ASSIGN_ADD error SEMICOLON
    (20) variable -> . VARIABLE ASSIGN_SUB error SEMICOLON
    (77) funcion -> . FUNCTION FUNCTION_NAME LPAREN argumentosFuncion RPAREN LKEY NEWLINE cuerpoFuncion RKEY
    (78) funcion -> . FUNCTION FUNCTION_NAME LPAREN RPAREN LKEY NEWLINE cuerpoFuncion RKEY
    (24) if -> . IF LPAREN operacionRelacional RPAREN LKEY NEWLINE programa RKEY
    (25) if -> . IF LPAREN operacionRelacional RPAREN LKEY NEWLINE programa RKEY ELSE LKEY NEWLINE programa RKEY NEWLINE
    (26) for -> . FOR LPAREN VARIABLE ASSIGN datos SEMICOLON VARIABLE operadorRelacionalNumerico datos SEMICOLON operacionModificadoras RPAREN LKEY NEWLINE programa RKEY NEWLINE
    (79) invocar -> . FUNCTION_NAME LPAREN datos_comma RPAREN SEMICOLON
    (80) invocar -> . FUNCTION_NAME LPAREN RPAREN SEMICOLON

    NEWLINE         shift and go to state 5
    COMMENT1        shift and go to state 6
    ECHO            shift and go to state 14
    VARIABLE        shift and go to state 15
    FUNCTION        shift and go to state 16
    IF              shift and go to state 18
    FOR             shift and go to state 19
    FUNCTION_NAME   shift and go to state 17

    programa                       shift and go to state 1
    bloque                         shift and go to state 2
    comment                        shift and go to state 3
    sentencia                      shift and go to state 4
    print                          shift and go to state 7
    asignacion                     shift and go to state 8
    variable                       shift and go to state 9
    funcion                        shift and go to state 10
    if                             shift and go to state 11
    for                            shift and go to state 12
    invocar                        shift and go to state 13

state 1

    (0) S' -> programa .



state 2

    (1) programa -> bloque .
    (2) programa -> bloque . programa
    (1) programa -> . bloque
    (2) programa -> . bloque programa
    (3) programa -> . comment bloque programa
    (6) bloque -> . sentencia NEWLINE
    (7) bloque -> . sentencia
    (8) bloque -> . NEWLINE
    (4) comment -> . COMMENT1
    (5) comment -> . COMMENT1 NEWLINE
    (9) sentencia -> . print
    (10) sentencia -> . asignacion
    (11) sentencia -> . variable
    (12) sentencia -> . funcion
    (13) sentencia -> . if
    (14) sentencia -> . for
    (15) sentencia -> . invocar
    (21) print -> . ECHO datos SEMICOLON
    (22) print -> . ECHO SEMICOLON
    (23) print -> . ECHO argumentos SEMICOLON
    (16) asignacion -> . VARIABLE ASSIGN expresion SEMICOLON
    (17) variable -> . VARIABLE ASSIGN_ADD d_numericos SEMICOLON
    (18) variable -> . VARIABLE ASSIGN_SUB d_numericos SEMICOLON
    (19) variable -> . VARIABLE ASSIGN_ADD error SEMICOLON
    (20) variable -> . VARIABLE ASSIGN_SUB error SEMICOLON
    (77) funcion -> . FUNCTION FUNCTION_NAME LPAREN argumentosFuncion RPAREN LKEY NEWLINE cuerpoFuncion RKEY
    (78) funcion -> . FUNCTION FUNCTION_NAME LPAREN RPAREN LKEY NEWLINE cuerpoFuncion RKEY
    (24) if -> . IF LPAREN operacionRelacional RPAREN LKEY NEWLINE programa RKEY
    (25) if -> . IF LPAREN operacionRelacional RPAREN LKEY NEWLINE programa RKEY ELSE LKEY NEWLINE programa RKEY NEWLINE
    (26) for -> . FOR LPAREN VARIABLE ASSIGN datos SEMICOLON VARIABLE operadorRelacionalNumerico datos SEMICOLON operacionModificadoras RPAREN LKEY NEWLINE programa RKEY NEWLINE
    (79) invocar -> . FUNCTION_NAME LPAREN datos_comma RPAREN SEMICOLON
    (80) invocar -> . FUNCTION_NAME LPAREN RPAREN SEMICOLON

    $end            reduce using rule 1 (programa -> bloque .)
    RETURN          reduce using rule 1 (programa -> bloque .)
    RKEY            reduce using rule 1 (programa -> bloque .)
    NEWLINE         shift and go to state 5
    COMMENT1        shift and go to state 6
    ECHO            shift and go to state 14
    VARIABLE        shift and go to state 15
    FUNCTION        shift and go to state 16
    IF              shift and go to state 18
    FOR             shift and go to state 19
    FUNCTION_NAME   shift and go to state 17

    bloque                         shift and go to state 2
    programa                       shift and go to state 20
    comment                        shift and go to state 3
    sentencia                      shift and go to state 4
    print                          shift and go to state 7
    asignacion                     shift and go to state 8
    variable                       shift and go to state 9
    funcion                        shift and go to state 10
    if                             shift and go to state 11
    for                            shift and go to state 12
    invocar                        shift and go to state 13

state 3

    (3) programa -> comment . bloque programa
    (6) bloque -> . sentencia NEWLINE
    (7) bloque -> . sentencia
    (8) bloque -> . NEWLINE
    (9) sentencia -> . print
    (10) sentencia -> . asignacion
    (11) sentencia -> . variable
    (12) sentencia -> . funcion
    (13) sentencia -> . if
    (14) sentencia -> . for
    (15) sentencia -> . invocar
    (21) print -> . ECHO datos SEMICOLON
    (22) print -> . ECHO SEMICOLON
    (23) print -> . ECHO argumentos SEMICOLON
    (16) asignacion -> . VARIABLE ASSIGN expresion SEMICOLON
    (17) variable -> . VARIABLE ASSIGN_ADD d_numericos SEMICOLON
    (18) variable -> . VARIABLE ASSIGN_SUB d_numericos SEMICOLON
    (19) variable -> . VARIABLE ASSIGN_ADD error SEMICOLON
    (20) variable -> . VARIABLE ASSIGN_SUB error SEMICOLON
    (77) funcion -> . FUNCTION FUNCTION_NAME LPAREN argumentosFuncion RPAREN LKEY NEWLINE cuerpoFuncion RKEY
    (78) funcion -> . FUNCTION FUNCTION_NAME LPAREN RPAREN LKEY NEWLINE cuerpoFuncion RKEY
    (24) if -> . IF LPAREN operacionRelacional RPAREN LKEY NEWLINE programa RKEY
    (25) if -> . IF LPAREN operacionRelacional RPAREN LKEY NEWLINE programa RKEY ELSE LKEY NEWLINE programa RKEY NEWLINE
    (26) for -> . FOR LPAREN VARIABLE ASSIGN datos SEMICOLON VARIABLE operadorRelacionalNumerico datos SEMICOLON operacionModificadoras RPAREN LKEY NEWLINE programa RKEY NEWLINE
    (79) invocar -> . FUNCTION_NAME LPAREN datos_comma RPAREN SEMICOLON
    (80) invocar -> . FUNCTION_NAME LPAREN RPAREN SEMICOLON

    NEWLINE         shift and go to state 5
    ECHO            shift and go to state 14
    VARIABLE        shift and go to state 15
    FUNCTION        shift and go to state 16
    IF              shift and go to state 18
    FOR             shift and go to state 19
    FUNCTION_NAME   shift and go to state 17

    bloque                         shift and go to state 21
    sentencia                      shift and go to state 4
    print                          shift and go to state 7
    asignacion                     shift and go to state 8
    variable                       shift and go to state 9
    funcion                        shift and go to state 10
    if                             shift and go to state 11
    for                            shift and go to state 12
    invocar                        shift and go to state 13

state 4

    (6) bloque -> sentencia . NEWLINE
    (7) bloque -> sentencia .

  ! shift/reduce conflict for NEWLINE resolved as shift
    NEWLINE         shift and go to state 22
    COMMENT1        reduce using rule 7 (bloque -> sentencia .)
    ECHO            reduce using rule 7 (bloque -> sentencia .)
    VARIABLE        reduce using rule 7 (bloque -> sentencia .)
    FUNCTION        reduce using rule 7 (bloque -> sentencia .)
    IF              reduce using rule 7 (bloque -> sentencia .)
    FOR             reduce using rule 7 (bloque -> sentencia .)
    FUNCTION_NAME   reduce using rule 7 (bloque -> sentencia .)
    $end            reduce using rule 7 (bloque -> sentencia .)
    RETURN          reduce using rule 7 (bloque -> sentencia .)
    RKEY            reduce using rule 7 (bloque -> sentencia .)

  ! NEWLINE         [ reduce using rule 7 (bloque -> sentencia .) ]


state 5

    (8) bloque -> NEWLINE .

    NEWLINE         reduce using rule 8 (bloque -> NEWLINE .)
    COMMENT1        reduce using rule 8 (bloque -> NEWLINE .)
    ECHO            reduce using rule 8 (bloque -> NEWLINE .)
    VARIABLE        reduce using rule 8 (bloque -> NEWLINE .)
    FUNCTION        reduce using rule 8 (bloque -> NEWLINE .)
    IF              reduce using rule 8 (bloque -> NEWLINE .)
    FOR             reduce using rule 8 (bloque -> NEWLINE .)
    FUNCTION_NAME   reduce using rule 8 (bloque -> NEWLINE .)
    $end            reduce using rule 8 (bloque -> NEWLINE .)
    RETURN          reduce using rule 8 (bloque -> NEWLINE .)
    RKEY            reduce using rule 8 (bloque -> NEWLINE .)


state 6

    (4) comment -> COMMENT1 .
    (5) comment -> COMMENT1 . NEWLINE

  ! shift/reduce conflict for NEWLINE resolved as shift
    ECHO            reduce using rule 4 (comment -> COMMENT1 .)
    VARIABLE        reduce using rule 4 (comment -> COMMENT1 .)
    FUNCTION        reduce using rule 4 (comment -> COMMENT1 .)
    IF              reduce using rule 4 (comment -> COMMENT1 .)
    FOR             reduce using rule 4 (comment -> COMMENT1 .)
    FUNCTION_NAME   reduce using rule 4 (comment -> COMMENT1 .)
    NEWLINE         shift and go to state 23

  ! NEWLINE         [ reduce using rule 4 (comment -> COMMENT1 .) ]


state 7

    (9) sentencia -> print .

    NEWLINE         reduce using rule 9 (sentencia -> print .)
    COMMENT1        reduce using rule 9 (sentencia -> print .)
    ECHO            reduce using rule 9 (sentencia -> print .)
    VARIABLE        reduce using rule 9 (sentencia -> print .)
    FUNCTION        reduce using rule 9 (sentencia -> print .)
    IF              reduce using rule 9 (sentencia -> print .)
    FOR             reduce using rule 9 (sentencia -> print .)
    FUNCTION_NAME   reduce using rule 9 (sentencia -> print .)
    $end            reduce using rule 9 (sentencia -> print .)
    RETURN          reduce using rule 9 (sentencia -> print .)
    RKEY            reduce using rule 9 (sentencia -> print .)


state 8

    (10) sentencia -> asignacion .

    NEWLINE         reduce using rule 10 (sentencia -> asignacion .)
    COMMENT1        reduce using rule 10 (sentencia -> asignacion .)
    ECHO            reduce using rule 10 (sentencia -> asignacion .)
    VARIABLE        reduce using rule 10 (sentencia -> asignacion .)
    FUNCTION        reduce using rule 10 (sentencia -> asignacion .)
    IF              reduce using rule 10 (sentencia -> asignacion .)
    FOR             reduce using rule 10 (sentencia -> asignacion .)
    FUNCTION_NAME   reduce using rule 10 (sentencia -> asignacion .)
    $end            reduce using rule 10 (sentencia -> asignacion .)
    RETURN          reduce using rule 10 (sentencia -> asignacion .)
    RKEY            reduce using rule 10 (sentencia -> asignacion .)


state 9

    (11) sentencia -> variable .

    NEWLINE         reduce using rule 11 (sentencia -> variable .)
    COMMENT1        reduce using rule 11 (sentencia -> variable .)
    ECHO            reduce using rule 11 (sentencia -> variable .)
    VARIABLE        reduce using rule 11 (sentencia -> variable .)
    FUNCTION        reduce using rule 11 (sentencia -> variable .)
    IF              reduce using rule 11 (sentencia -> variable .)
    FOR             reduce using rule 11 (sentencia -> variable .)
    FUNCTION_NAME   reduce using rule 11 (sentencia -> variable .)
    $end            reduce using rule 11 (sentencia -> variable .)
    RETURN          reduce using rule 11 (sentencia -> variable .)
    RKEY            reduce using rule 11 (sentencia -> variable .)


state 10

    (12) sentencia -> funcion .

    NEWLINE         reduce using rule 12 (sentencia -> funcion .)
    COMMENT1        reduce using rule 12 (sentencia -> funcion .)
    ECHO            reduce using rule 12 (sentencia -> funcion .)
    VARIABLE        reduce using rule 12 (sentencia -> funcion .)
    FUNCTION        reduce using rule 12 (sentencia -> funcion .)
    IF              reduce using rule 12 (sentencia -> funcion .)
    FOR             reduce using rule 12 (sentencia -> funcion .)
    FUNCTION_NAME   reduce using rule 12 (sentencia -> funcion .)
    $end            reduce using rule 12 (sentencia -> funcion .)
    RETURN          reduce using rule 12 (sentencia -> funcion .)
    RKEY            reduce using rule 12 (sentencia -> funcion .)


state 11

    (13) sentencia -> if .

    NEWLINE         reduce using rule 13 (sentencia -> if .)
    COMMENT1        reduce using rule 13 (sentencia -> if .)
    ECHO            reduce using rule 13 (sentencia -> if .)
    VARIABLE        reduce using rule 13 (sentencia -> if .)
    FUNCTION        reduce using rule 13 (sentencia -> if .)
    IF              reduce using rule 13 (sentencia -> if .)
    FOR             reduce using rule 13 (sentencia -> if .)
    FUNCTION_NAME   reduce using rule 13 (sentencia -> if .)
    $end            reduce using rule 13 (sentencia -> if .)
    RETURN          reduce using rule 13 (sentencia -> if .)
    RKEY            reduce using rule 13 (sentencia -> if .)


state 12

    (14) sentencia -> for .

    NEWLINE         reduce using rule 14 (sentencia -> for .)
    COMMENT1        reduce using rule 14 (sentencia -> for .)
    ECHO            reduce using rule 14 (sentencia -> for .)
    VARIABLE        reduce using rule 14 (sentencia -> for .)
    FUNCTION        reduce using rule 14 (sentencia -> for .)
    IF              reduce using rule 14 (sentencia -> for .)
    FOR             reduce using rule 14 (sentencia -> for .)
    FUNCTION_NAME   reduce using rule 14 (sentencia -> for .)
    $end            reduce using rule 14 (sentencia -> for .)
    RETURN          reduce using rule 14 (sentencia -> for .)
    RKEY            reduce using rule 14 (sentencia -> for .)


state 13

    (15) sentencia -> invocar .

    NEWLINE         reduce using rule 15 (sentencia -> invocar .)
    COMMENT1        reduce using rule 15 (sentencia -> invocar .)
    ECHO            reduce using rule 15 (sentencia -> invocar .)
    VARIABLE        reduce using rule 15 (sentencia -> invocar .)
    FUNCTION        reduce using rule 15 (sentencia -> invocar .)
    IF              reduce using rule 15 (sentencia -> invocar .)
    FOR             reduce using rule 15 (sentencia -> invocar .)
    FUNCTION_NAME   reduce using rule 15 (sentencia -> invocar .)
    $end            reduce using rule 15 (sentencia -> invocar .)
    RETURN          reduce using rule 15 (sentencia -> invocar .)
    RKEY            reduce using rule 15 (sentencia -> invocar .)


state 14

    (21) print -> ECHO . datos SEMICOLON
    (22) print -> ECHO . SEMICOLON
    (23) print -> ECHO . argumentos SEMICOLON
    (38) datos -> . VARIABLE
    (39) datos -> . d_strings
    (40) datos -> . d_numericos
    (41) datos -> . d_booleanos
    (36) argumentos -> . datos COMMA argumentos
    (37) argumentos -> . datos
    (44) d_strings -> . STRING
    (42) d_numericos -> . NUMBER
    (43) d_numericos -> . FLOAT
    (45) d_booleanos -> . BOOLEAN
